--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.379.0",
     "mongoose": "^8.4.4",
-    "next": "14.1.4",
+    "next": "14.2.4",
     "next-auth": "5.0.0-beta.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -38,7 +40,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8.4.38",
     "sharp": "^0.33.4",
     "tailwindcss": "^3.4.4",
