--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.18",
+    "next-safe-action": "^7.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
@@ -41,7 +42,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "sharp": "^0.33.4",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
